# gbt-code-audit-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESCRIPTION.md  README.md  SKILL.md  _meta.json  _skillhub_meta.json  manifest.json  pyproject.toml  report_template.md  requirements.txt  skill.py  test_skill.py  test_spotbugs_validator.py
docs/reference/: README.md  gbt_mapping.md
docs/vulnerabilities/: README.md  code_injection.md  command_injection.md  deserialization.md  hardcoded_credentials.md  path_traversal.md  weak_crypto.md
docs/workflow/: audit_workflow.md  quality_standards.md  troubleshooting.md
knowledge/: __init__.py
knowledge/vulnerabilities/: __init__.py  sql_injection.md
mcp/: audit_prompt.md
rules/: GBT_34943-2017.md  GBT_34944-2017.md  GBT_34946-2017.md  GBT_39412-2020.md
scripts/: audit_coverage_checker.py  batch_fix.py  constants.py  patterns.py  severity_rating.py  skill.py  validation.py  validation_report.py  vulnerability_rules.yaml
test-samples/cpp/: vulnerable_cpp.cpp
test-samples/csharp/: vulnerable_csharp.cs
test-samples/java/: VulnerableJava.java
test-samples/python/: vulnerable_python.py
