[project]
name = "gbt-code-audit-skill"
version = "2.1.0"
description = "基于中国国家标准（GB/T）的代码安全审计技能"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Code Audit Team"}
]
keywords = ["security", "code-audit", "gbt", "vulnerability-detection", "china-standard"]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
gbt-audit = "skill:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["skill.py", "knowledge*"]

[tool.pytest.ini_options]
testpaths = ["test_skill.py"]
python_files = ["test_*.py"]
python_functions = ["test_*"]